grid structure with fixed header and footer

--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
     <title>FotoBlog</title>
   </head>
   <body>
-    <div class="app">
-      <header>header</header>
-      <main>main</main>
-      <footer>footer</footer>
+    <div id="app">
+      <header class="container">header</header>
+      <main>
+        <div class="container">
+          main
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem
+            accusantium inventore dolorem blanditiis quae ullam sed recusandae
+            impedit nulla veniam? Unde itaque autem repellendus voluptatibus
+            aperiam excepturi magnam laborum officiis?
+          </p>
+        </div>
+      </main>
+      <footer class="container">footer</footer>
     </div>
   </body>
 </html>
