--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
     <title>FotoBlog</title>
+    <link rel="stylesheet" href="style.css" />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="app">
@@ -12,11 +20,6 @@
       <main>
         <div class="container">
           main
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem
-            accusantium inventore dolorem blanditiis quae ullam sed recusandae
-            impedit nulla veniam? Unde itaque autem repellendus voluptatibus
-            aperiam excepturi magnam laborum officiis?
           </p>
         </div>
       </main>
