--- a/index.html
+++ b/index.html
@@ -16,14 +16,28 @@
   </head>
   <body>
     <div id="app">
-      <header class="container">header</header>
+      <header class="container">
+        <nav>
+          <img src="./assets/camera.svg" alt="Logo image" />
+          <ul>
+            <li>Home</li>
+            <li class="active">Galeria</li>
+          </ul>
+        </nav>
+        <form action="">search</form>
+
+        <img
+          class="avatar"
+          src="https://randomuser.me/api/portraits/men/3.jpg"
+          alt="image of a man"
+        />
+      </header>
       <main>
-        <div class="container">
-          main
-          </p>
-        </div>
+        <div class="container">main</div>
       </main>
-      <footer class="container">footer</footer>
+      <footer class="container">
+        <p>© 2023 - Rocketseat Explorer</p>
+      </footer>
     </div>
   </body>
 </html>
