survey form with good accessibility practicies

--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
             <li class="active">Galeria</li>
           </ul>
         </nav>
-        <form action="">search</form>
+        <form>
+          <div class="input-wrapper">
+            <label for="">Pesquise por imagens e coleções</label>
+            <input
+              id="search"
+              type="text"
+              placeholder="Pesquise por imagens e coleções"
+            />
+          </div>
+        </form>
 
         <img
           class="avatar"
