--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="app">
       <header class="container">
         <nav>
-          <img src="./assets/camera.svg" alt="Logo image" />
+          <img class="logo" src="./assets/camera.svg" alt="Logo image" />
           <ul>
             <li>Home</li>
             <li class="active">Galeria</li>
