--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h1>Galeria</h1>
 
           <section class="gallery">
-            <figure class="item">
+            <figure class="item" style="--delay: 0.4s">
               <img src="https://source.unsplash.com/random?a=1" alt="" />
 
               <figcaption class="details">
@@ -55,7 +55,7 @@
               </figcaption>
             </figure>
 
-            <figure class="item">
+            <figure class="item" style="--delay: 0.6s">
               <img src="https://source.unsplash.com/random?b=1" alt="" />
 
               <figcaption class="details">
@@ -64,7 +64,7 @@
               </figcaption>
             </figure>
 
-            <figure class="item">
+            <figure class="item" style="--delay: 0.8s">
               <img src="https://source.unsplash.com/random?c=1" alt="" />
 
               <figcaption class="details">
@@ -73,7 +73,7 @@
               </figcaption>
             </figure>
 
-            <figure class="item">
+            <figure class="item" style="--delay: 1s">
               <img src="https://source.unsplash.com/random?d=1" alt="" />
 
               <figcaption class="details">
@@ -82,7 +82,7 @@
               </figcaption>
             </figure>
 
-            <figure class="item">
+            <figure class="item" style="--delay: 1.2s">
               <img src="https://source.unsplash.com/random?e=1" alt="" />
 
               <figcaption class="details">
@@ -91,7 +91,7 @@
               </figcaption>
             </figure>
 
-            <figure class="item">
+            <figure class="item" style="--delay: 1.4s">
               <img src="https://source.unsplash.com/random?f=1" alt="" />
 
               <figcaption class="details">
